--- a/bin/src/main/resources/application.yaml
+++ b/bin/src/main/resources/application.yaml
@@ -1,7 +1,6 @@
 spring:
   spring.application.name: reservaCarritos
   jpa.hibernate.ddl-auto: update
-  spring.jpa.hibernate.ddl-auto: validate
   datasource:
     driverClassName: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/reservaCarritos?createDatabaseIfNotExist=true
@@ -21,3 +20,5 @@ logging:
     max-size: 1MB
     max-history: 10
     total-size-cap: 10MB
+
+urlCors: http://localhost:5173
