--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
@@ -8,7 +9,7 @@
 		<version>1.0.0</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
-	
+
 	<artifactId>BookingServer</artifactId>
 	<name>BookingServer</name>
 
@@ -17,6 +18,12 @@
 		<dependency>
 			<groupId>es.iesjandula.reaktor</groupId>
 			<artifactId>BaseServer</artifactId>
+			<version>1.0.0</version>
+		</dependency>
+		<!-- Utilidades comunes a todos los client -->
+		<dependency>
+			<groupId>es.iesjandula.reaktor</groupId>
+			<artifactId>BaseClient</artifactId>
 			<version>1.0.0</version>
 		</dependency>
 		<dependency>
