--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -27,6 +27,10 @@ logging:
 reaktor:
   publicKeyFile: C:\claves\public_key.pem
   urlCors: http://localhost:5173, http://192.168.1.209:5173, http://192.168.1.181:5173, http://192.168.1.137:5173, http://172.20.10.2:5173
+  clientId: bookings
   constantes:
     reservasFijas: ""
     reservasPuntuales: ""
+  firebase_server_url: http://localhost:8083
+  users_timeout: 30000
+  http_connection_timeout: 30000
