Cambios en paquetería y en el nombre de Puntuales a Temporales

--- a/src/main/resources/application-VPS.yaml
+++ b/src/main/resources/application-VPS.yaml
@@ -27,4 +27,4 @@ reaktor:
   urlCors: https://somos.iesjandula.es
   constantes:
     reservasFijas: ""
-    reservasPuntuales: ""
+    reservasTemporales: ""
