--- a/src/main/resources/application-VPS.yaml
+++ b/src/main/resources/application-VPS.yaml
@@ -7,6 +7,11 @@ spring:
     hikari:
       connection-timeout: 60000
       maximum-pool-size: 5
+  http:
+    encoding:
+      charset: UTF-8
+      enabled: true
+      force: true
 server:
   port: 8084
   ssl:
@@ -25,6 +30,10 @@ logging:
 reaktor:
   publicKeyFile: ${PUBLIC_KEY_FILE}
   urlCors: https://somos.iesjandula.es
+  clientId: bookings
   constantes:
     reservasFijas: ""
     reservasTemporales: ""
+  firebase_server_url: https://somos.iesjandula.es
+  users_timeout: 30000
+  http_connection_timeout: 30000
