--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -31,6 +31,7 @@ reaktor:
   constantes:
     reservasFijas: ""
     reservasTemporales: ""
+    maxDiasCalendario: 60
   firebase_server_url: http://localhost:8083
   users_timeout: 30000
   http_connection_timeout: 30000
