nuevo parámetro en yaml para evitar tener que activarlo mediante "create". Ahora se usará un booleano llamado "reiniciarParametros"

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -35,3 +35,4 @@ reaktor:
   firebase_server_url: http://localhost:8083
   users_timeout: 30000
   http_connection_timeout: 30000
+  reiniciarParametros: true
