--- a/src/main/resources/application-VPS.yaml
+++ b/src/main/resources/application-VPS.yaml
@@ -33,3 +33,4 @@ reaktor:
   firebase_server_url: https://api.iesjandula.es/
   users_timeout: 30000
   http_connection_timeout: 30000
+  reiniciarParametros: true
