--- a/src/main/resources/application-VPS.yaml
+++ b/src/main/resources/application-VPS.yaml
@@ -1,5 +1,5 @@
 spring:
-  jpa.hibernate.ddl-auto: update
+  jpa.hibernate.ddl-auto: none
   datasource:
     url: jdbc:mysql://localhost:3306/reaktor_bookingserver?createDatabaseIfNotExist=true
     username: root
