resolviendo errores de las 3 tareas anteriores

--- a/src/main/resources/application-VPS.yaml
+++ b/src/main/resources/application-VPS.yaml
@@ -32,4 +32,4 @@ reaktor:
     reservasFijas: ""
     reservasTemporales: ""
   http_connection_timeout: 30000
-  reiniciarParametros: true
+  reiniciarParametros: false
